--- a/extract_here_and_delete.desktop
+++ b/extract_here_and_delete.desktop
@@ -6,5 +6,6 @@ Actions=extractAndDelete
 
 [Desktop Action extractAndDelete]
 Name=Extract Here and Delete
+Name[nl]=Hier uitpakken en verwijderen
 Icon=archive-extract
 Exec=ark -ba %u && rm %u
